# griesheim-transparent.de

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md
.github/: dependabot.yml
.github/workflows/: build.yml  docker-image.yml
RIScraper/: Dockerfile  README.md  config.yaml  crontab  requirements.txt
RIScraper/RIScraper/: Scraper.py  utils.py
RIScraper/RIScraper/db/: GUID.py  Repository.py  Schema.py  TransactionManager.py  __init__.py
RIScraper/RIScraper/db/models/: Consultation.py  Document.py  Meeting.py  Membership.py  Organization.py  Person.py  __init__.py
RIScraper/tests/: scraper_test.py  test_requirements.txt
RIScraper/tests/db/: repository_test.py
deployment/: .env  Caddyfile  dev.yaml  dev_nginx.yaml  init_solr.sh  update_solr.sh
deployment/nginx_dev/: Dockerfile  griesheimtransparent.conf
experiments/: footer_removal.ipynb  header_removal.ipynb
frontend/: .dockerignore  .env  Dockerfile  entrypoint.sh  manage.py  pyproject.toml  requirements.txt
frontend/frontend/: admin.py  apps.py  databaserouter.py  middleware.py  models.py  settings.py  solr.py  urls.py  utils.py  views.py
frontend/frontend/healthcheck/: GotenbergHealthCheckBackend.py  PDFActHealthCheckBackend.py  PreviewServiceHealthCheckBackend.py  SolrHealthCheckBackend.py  TikaHealthCheckBackend.py  __init__.py
frontend/frontend/management/: utils.py
frontend/frontend/management/commands/: update_solr.py
frontend/frontend/migrations/: 0002_create_superuser.py  0003_query_doc_type_query_organization_query_sort_and_more.py  0005_query_num_results.py
frontend/frontend/models/: risdb.py
frontend/frontend/processing/: cache_repository.py  external_services.py  file_repository.py  processing.py
frontend/frontend/risdb/: models.py
frontend/frontend/search/: __init__.py  search_results.py  solr.py  utils.py
frontend/frontend/static/css/: style.css
frontend/frontend/static/js/: autocomplete.js
frontend/frontend/templates/: about.html  base.html  error.html  faq.html  header.html  impressum.html  input.html  main.html  robots.txt  suggestions.html  why.html
frontend/frontend/templates/components/: footer.html  input.html  mail.html  suggestions.html
frontend/frontend/templates/main/: main.html  newest.html
frontend/frontend/templates/search/: document.txt  facets.html  pagination.html  result.html  results.html  search.html  search_list_element.html
frontend/frontend/tests/: conftest.py  settings.py  test_main_view.py  test_search_view.py
frontend/ris/: models.py
frontend/ris/management/: utils.py
frontend/ris/management/commands/: update_solr.py
frontend/ris/migrations/: 0001_initial.py  0002_alter_consultation_text.py  0002_alter_document_uri.py  0004_alter_organization_name.py  0005_alter_document_last_modified.py
parliscope/: .dockerignore  Dockerfile  entrypoint.sh  manage.py  pyproject.toml
parliscope/frontend/: admin.py  databaserouter.py  urls.py  views.py
parliscope/frontend/healthcheck/: __init__.py
parliscope/frontend/management/commands/: update_solr.py
parliscope/frontend/migrations/: 0001_initial.py  0004_query_page.py  0006_query_query_time.py
parliscope/frontend/processing/: cache_repository.py  file_repository.py  processing.py
parliscope/frontend/static/css/: style.css  unpoly.css
parliscope/frontend/templates/: impressum.html  robots.txt
parliscope/frontend/templates/main/: main.html  newest.html
parliscope/frontend/templates/search/: facets.html  pagination.html  result.html  results.html
parliscope/frontend/tests/: settings.py  test_main_view.py
parliscope/healthcheck/: GotenbergHealthCheckBackend.py  MyCeleryPingHealthCheckBackend.py  SolrHealthCheckBackend.py  __init__.py  admin.py  apps.py
parliscope/healthcheck/templates/admin/: base.html
parliscope/healthcheck/templates/healthcheck/: system_health.html
parliscope/models/: admin.py
parliscope/models/migrations/: 0001_initial.py  0002_alter_document_uri.py  0003_alter_organization_organization_id.py  0004_alter_organization_name.py  0005_alter_document_last_modified.py
parliscope/parliscope/: apps.py  celery.py  databaserouter.py  settings.py  test_settings.py  urls.py  views.py  wsgi.py
parliscope/parliscope/management/commands/: setup_periodic_tasks.py  update_solr.py
parliscope/parliscope/tasks/: indexing.py
parliscope/parliscope/tests/: test_setup_periodic_tasks.py
parliscope/ris/migrations/: 0003_alter_organization_organization_id.py
scraper/: Dockerfile  crontab  pyproject.toml  requirements.txt  scrapy.cfg
scraper/sessionnet/: items.py  middlewares.py  pipelines.py  selectors.py  settings.py  spiders.py  url_suffices.py  urls.py  utils.py
scraper/sessionnet/spiders/: calendar_spider.py  sessionnet_spider.py  utils.py
solr/: Dockerfile  solr_import.py
(+7 files in other folders)
