[project]
name = "parliscope"
version = "1.0.0"
description = "Django web application for municipal transparency platform"
requires-python = ">=3.13"

dependencies = [
    "asgiref==3.10.0",
    "certifi==2024.12.14",
    "charset-normalizer==3.4.3",
    "django==5.2.7",
    "django-appconf==1.1.0",
    "django-environ==0.12.0",
    "fontawesomefree==6.5.1",
    "idna==3.10",
    "psycopg2==2.9.10",
    "pysolr==3.10.0",
    "rcssmin==1.2.2",
    "requests==2.32.4",
    "rjsmin==1.2.4",
    "six==1.16.0",
    "sqlparse==0.5.3",
    "tornado==6.5.2",
    "tzdata==2025.1",
    "urllib3==2.5.0",
    "watchdog==6.0.0",
    "websocket-client==1.9.0",
    "gunicorn==23.0.0",
    "tika==2.6.0",
    "django-health-check~=3.20.0",
    "pytz~=2025.2",
    "whitenoise~=6.11.0",
    "celery>=5.4.0",
    "redis>=6.4.0",
    "django-celery-results>=2.6.0",
    "django-celery-beat>=2.8.1",
]

[project.optional-dependencies]
dev = [
    "pytest~=8.4.2",
    "pytest-env~=1.1.3",
    "pytest-django~=4.11.1",
    "ruff~=0.13.2",
    "mypy",
    "django-stubs",
    "types-requests",
]

[tool.pytest.ini_options]
testpaths = ["frontend/tests", "models/tests", "parliscope/tests"]
addopts = "--tb=short"
env = [
    "DJANGO_SETTINGS_MODULE=parliscope.test_settings"
]

[tool.ruff]
target-version = "py313"
line-length = 88
extend-exclude = ["*migrations/*.py"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["parliscope", "frontend", "models"]

[tool.mypy]
python_version = "3.13"
files = ["."]
exclude = [
    "migrations/",
]
plugins = ["mypy_django_plugin.main"]
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
ignore_missing_imports = true

[tool.django-stubs]
django_settings_module = "parliscope.test_settings"

[dependency-groups]
dev = [
    "celery-types>=0.23.0",
    "django-stubs>=5.2.0",
    "mypy>=1.17.1",
    "pre-commit>=4.3.0",
    "types-requests>=2.32.4.20250809",
]
