[project]
name = "parliscope-scraper"
version = "1.0.0"
description = "Scrapy spider for extracting municipal documents from SessionNet"
requires-python = ">=3.13"

dependencies = [
    "psycopg2~=2.9.10",
    "Scrapy>=2.14.1,<2.16.0",
    "peewee~=4.0.1",
    "pytz~=2026.1",
    "Twisted~=25.5",
]
